@@ -2,6 +2,7 @@
 
 === Edge
 
+* Update to cucumber-rails 0.3.0 [Jim Gay]
 * Update to Haml 2.2.24 [Jim Gay]
 
 === 0.9.0 RC2 (April 27, 2010)
